fix footer on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -211,7 +211,7 @@ img, video {
     width: 100%;
     position: fixed;
     bottom: 0;
-    z-index: 1001;
+    z-index: 1000;
 }
 
 .greeting-wrapper {
@@ -425,7 +425,7 @@ img, video {
         background: transparent;
         border: transparent;
         cursor: pointer;
-        z-index: 1001;
+        z-index: 1002;
     }
 
     .hamburger_active .bar:nth-child(1) {
@@ -439,7 +439,7 @@ img, video {
 
     .index-wrapper {
         width: 100%;
-        z-index: 1000;
+        z-index: 1001;
         background-color: var(--background-color);
         top: -100vh;
         transition: 0.4s ease;
